# advent-of-code-hhoppe

./: README.md  pyproject.toml  setup.py  test_advent_of_code_hhoppe.py
.github/workflows/: main.yml
advent_of_code_hhoppe/: __init__.py  setup.cfg
