[project]
name = "advent-of-code-hhoppe"
description = "Library for Advent of Code -- Hugues Hoppe."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Hugues Hoppe", email="hhoppe@gmail.com"}]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
keywords = []

# pip dependencies of the project
dependencies = [
    "advent-of-code-data",
    "IPython",
]

# This is set automatically by flit using `*.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/hhoppe/advent-of-code-hhoppe"
repository = "https://github.com/hhoppe/advent-of-code-hhoppe"
# Other: `documentation`, `changelog`

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install .[dev]`
dev = [
    # "pytest",
    # "pytest-xdist",
    # "pylint>=2.6.0",
]

[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"

[tool.autopep8]
indent_size = 2
ignore = "E121,E125,E126,E129,E226,E302,E305,E501,W504,E741,E20,W503"
exclude = "*.ipynb_checkpoints"
aggressive = 3
recursive = true

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.pyink]
pyink-indentation = 2
line-length = 100  # Default is 88.
pyink-use-majority-quotes = true
extend-exclude = "\\.ipynb"

[tool.pylint.main]
disable = [
    "fixme", "redefined-builtin", "cell-var-from-loop",
    "using-constant-test", "simplifiable-condition", "import-outside-toplevel", "line-too-long",
    "too-many-lines", "too-few-public-methods", "too-many-arguments", "too-many-locals", "use-dict-literal",
]
reports = false
score = false
recursive = true
ignore-paths = [".*\\.ipynb_checkpoints"]

[tool.pylint.basic]
good-names-rgxs = "^[a-z][a-z0-9]?|[A-Z]([A-Z_]*[A-Z])?$"

[tool.pylint.format]
indent-string = "  "
expected-line-ending-format = "LF"

[tool.pytest.ini_options]
addopts = "--ignore-glob '*.#*' --doctest-modules"
